; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_stringformat.c_test_characterrange.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_stringformat.c_test_characterrange.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LANG_NEUTRAL = common dso_local global i32 0, align 4
@Ok = common dso_local global i32 0, align 4
@InvalidParameter = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_characterrange to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_characterrange() #0 {
  %1 = alloca [3 x i32], align 4
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = load i32, i32* @LANG_NEUTRAL, align 4
  %6 = call i32 @GdipCreateStringFormat(i32 0, i32 %5, i32** %3)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* @Ok, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @expect(i32 %7, i32 %8)
  %10 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 0
  %11 = call i32 @GdipSetStringFormatMeasurableCharacterRanges(i32* null, i32 3, i32* %10)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* @InvalidParameter, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @expect(i32 %12, i32 %13)
  %15 = load i32*, i32** %3, align 8
  %16 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 0
  %17 = call i32 @GdipSetStringFormatMeasurableCharacterRanges(i32* %15, i32 0, i32* %16)
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* @Ok, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @expect(i32 %18, i32 %19)
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @GdipSetStringFormatMeasurableCharacterRanges(i32* %21, i32 3, i32* null)
  store i32 %22, i32* %4, align 4
  %23 = load i32, i32* @InvalidParameter, align 4
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @expect(i32 %23, i32 %24)
  %26 = load i32*, i32** %3, align 8
  %27 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 0
  %28 = call i32 @GdipSetStringFormatMeasurableCharacterRanges(i32* %26, i32 3, i32* %27)
  store i32 %28, i32* %4, align 4
  %29 = load i32, i32* @Ok, align 4
  %30 = load i32, i32* %4, align 4
  %31 = call i32 @expect(i32 %29, i32 %30)
  %32 = load i32*, i32** %3, align 8
  %33 = call i32 @GdipGetStringFormatMeasurableCharacterRangeCount(i32* %32, i32* %2)
  store i32 %33, i32* %4, align 4
  %34 = load i32, i32* @Ok, align 4
  %35 = load i32, i32* %4, align 4
  %36 = call i32 @expect(i32 %34, i32 %35)
  %37 = load i32, i32* %4, align 4
  %38 = load i32, i32* @Ok, align 4
  %39 = icmp eq i32 %37, %38
  br i1 %39, label %40, label %43

40:                                               ; preds = %0
  %41 = load i32, i32* %2, align 4
  %42 = call i32 @expect(i32 3, i32 %41)
  br label %43

43:                                               ; preds = %40, %0
  %44 = load i32*, i32** %3, align 8
  %45 = call i32 @GdipDeleteStringFormat(i32* %44)
  store i32 %45, i32* %4, align 4
  %46 = load i32, i32* @Ok, align 4
  %47 = load i32, i32* %4, align 4
  %48 = call i32 @expect(i32 %46, i32 %47)
  ret void
}

declare dso_local i32 @GdipCreateStringFormat(i32, i32, i32**) #1

declare dso_local i32 @expect(i32, i32) #1

declare dso_local i32 @GdipSetStringFormatMeasurableCharacterRanges(i32*, i32, i32*) #1

declare dso_local i32 @GdipGetStringFormatMeasurableCharacterRangeCount(i32*, i32*) #1

declare dso_local i32 @GdipDeleteStringFormat(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
